# hai

./: Cargo.toml
.cargo/: config.toml
crates/cpu64/src/: interrupt.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: alloc.rs  boot.rs  lib.rs  main.rs  memory.rs
crates/riscv64/src/: lib.rs
crates/riscv64/src/register/: stvec.rs
crates/x86_64/src/: address.rs  interrupt.rs  paging.rs
crates/x86_64/src/register/: cr0.rs  cr2.rs  cr3.rs  cr4.rs  mod.rs  xcr0.rs
scripts/: qemu.rs
